<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ListView
            android:layout_width="343dp"
            android:layout_height="449dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="80dp"
            app:layout_constraintHorizontal_bias="0.492" android:id="@+id/productListInCart"/>
    <Button
            android:onClick="openMenuPageFromCart"
            android:text="@string/menu_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/menuButton2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.913"/>
    <Button
            android:onClick="removeItem"
            android:text="@string/remove_item_button_label"
            android:layout_width="145dp"
            android:layout_height="58dp" android:id="@+id/removeButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.062" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="608dp"/>
    <Button
            android:onClick="checkout"
            android:text="@string/checkout_button_label"
            android:layout_width="155dp"
            android:layout_height="60dp" android:id="@+id/checkoutButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.823" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="608dp"/>
    <TextView
            android:text="@string/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/statusLabel"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.071"/>
    <TextView
            android:text="-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/status"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/statusLabel"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.071"/>
    <TextView
            android:text="@string/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cartPriceLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="572dp"/>
    <TextView
            android:text="-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cartPrice"
            app:layout_constraintStart_toEndOf="@+id/cartPriceLabel" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="572dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>